fix bordered all images on ie

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,10 @@ a:hover {
 	background-color: lavender;
 }
 
+img {
+	border: 0px;
+}
+
 .delete_small:hover {
 	text-decoration: underline;
 	background-color: white;
